--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "es6lib",
-  "version": "0.0.1",
   "description": "lib",
+  "dependencies": {
+  },
+  "devDependencies": {
+    "babel": "5.x",
+    "chai": "^3.3.0",
+    "chai-as-promised": "^5.1.0",
+    "mocha": "^2.3.3"
+  },
+  "name": "es6lib",
   "repository": {
     "type": "git",
     "url": "https://github.com/NiklasGollenstede/es6lib"
   },
-  "dependencies": {
-    "mkdirp": "latest"
+  "scripts": {
+    "debug": "node debug.js",
+    "start": "node start.js",
+    "test": "mocha --require test/node",
+    "test-debug": "node-debug _mocha --debug --require test/node"
   },
-  "devDependencies": {
-    "babel": "latest",
-    "traceur": "latest"
-  }
+  "version": "0.0.1"
 }
