--- a/.jshintrc
+++ b/.jshintrc
@@ -2,8 +2,10 @@
 	"indent": 1,
 	"-W002": false, // Value of '{cought exception}' may be overwritten in IE 8 and earlier.
 	"-W006": false, // Confusing minuses.
+	"-W022": false, // Do not assign to the exception parameter. Note: only relevant in IE <= 8
 	"-W030": false, // Expected an assignment or function call and instead saw an expression.
 	"-W054": false, // The Function constructor is a form of eval.
+	"-W058": false, // Missing '()' invoking a constructor.
 	"-W093": false, // Did you mean to return a conditional instead of an assignment?
 
 	"curly": true,
