--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "debug": "node debug.js",
     "start": "node start.js",
-    "test": "mocha --harmony_destructuring",
+    "test": "mocha",
     "test-debug": "node-debug _mocha --debug --require test/node"
   },
   "version": "0.0.1"
