--- a/.jshintrc
+++ b/.jshintrc
@@ -1,44 +1,34 @@
 {
-	"indent": 1,
+	"indent": 1, // indent with tabs
 	"-W002": false, // Value of '{cought exception}' may be overwritten in IE 8 and earlier.
 	"-W006": false, // Confusing minuses.
-	"-W022": false, // Do not assign to the exception parameter. Note: only relevant in IE <= 8
 	"-W030": false, // Expected an assignment or function call and instead saw an expression.
+	"-W034": false, // Unnecessary directive "use strict".
 	"-W054": false, // The Function constructor is a form of eval.
 	"-W058": false, // Missing '()' invoking a constructor.
-	"-W093": false, // Did you mean to return a conditional instead of an assignment?
+	"-W078": false, // Setter is defined without getter.
 
 	"curly": true,
+	"newcap": false,
+	"undef": false,
+	"eqeqeq": true,
 	"eqnull": true,
 	"laxbreak": true,
-	"multistr": true,
-	"newcap": false,
-	"noyield": true,
-	"undef": false,
 	"validthis": true,
+	"elision": true,
+	"varstmt": true, // enforce 'let' or 'const' instead of 'var'
+	"sub": true, // allow headers['DNT'] instead of headers.DNT
 
-	"esnext": true,
-	"strict": true,
+	"esversion": 6,
+	"strict": "implied", // 'use strict' is implicit for functions with non-simple parameter lists, but jshint doesn't get that
 	"globalstrict": true,
 	"latedef": "nofunc",
 
+	"browser": true,
+	"devel": true, // console, alert, ...
+
 	"globals": {
-		"document": true,
-		"self": true,
-		"window": true,
-		"process": false,
-		"global": false,
-		"require": false,
-		"console": false,
-		"exports": false,
-		"describe": false,
-		"xdescribe": false,
-		"it": false,
-		"xit": false,
-		"chaiAsPromised": false,
-		"expect": false,
-		"AssertionError": false,
-		"Assertion": false,
-		"assert": false
+		"define": false,
+		"require": false
 	}
 }
