--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chai-as-promised": "^5.1.0",
     "mocha": "^2.3.3"
   },
+  "license": "MPL-2.0",
   "name": "es6lib",
   "repository": {
     "type": "git",
