--- a/.jshintrc
+++ b/.jshintrc
@@ -1,20 +1,24 @@
 {
 	"indent": 1, // indent with tabs
-	"-W002": false, // Value of '{cought exception}' may be overwritten in IE 8 and earlier.
+	"-W002": false, // Value of '{caught exception}' may be overwritten in IE 8 and earlier.
+	"-W003": false, // '{a}' was used before it was defined.
 	"-W006": false, // Confusing minuses.
 	"-W030": false, // Expected an assignment or function call and instead saw an expression.
 	"-W034": false, // Unnecessary directive "use strict".
 	"-W054": false, // The Function constructor is a form of eval.
+	"-W056": false, // Bad constructor.
 	"-W058": false, // Missing '()' invoking a constructor.
 	"-W078": false, // Setter is defined without getter.
+	"-W082": false, // Function declarations should not be placed in blocks. (Not a problem in strict mode)
 
 	"curly": true, // always require blocks with curly braces in control flow statements
 	"elision": true, // allow empty array entries [ , , ]
 	"eqeqeq": true, // enforce === instead of ==
 	"eqnull": true, // allow `== null` and `!= null` as exception of 'eqeqeq'
 	"laxbreak": true, // allow 'possibly unsafe line breakings'
-	"loopfunc": true, // allow functions winthin loops
+	"loopfunc": true, // allow functions within loops
 	"newcap": false, // deprecated
+	"noyield": true, // allow generator functions without yield statements
 	"sub": true, // allow headers['DNT'] instead of headers.DNT
 	"undef": true, // warn about not-defined variables
 	"validthis": true,
@@ -25,7 +29,7 @@
 	"globalstrict": true,
 	"latedef": "nofunc",
 
-	"browser": true,
+	"browser": false,
 	"devel": true, // console, alert, ...
 
 	"globals": {
