addd test (amdjs/amdjs-tests), fix to pass tests

--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
+		"amdjs_test_server": "github:amdjs/amdjs-tests#1f50309",
+		"express": "3.0.0",
+		"npm": "3.10.10",
 		"babel-eslint": "7.1.1",
 		"eslint": "3.14.1",
 		"eslintrc": "NiklasGollenstede/eslintrc#c36e3e8"
 	},
 	"scripts": {
+		"test": "node test/server",
 		"lint": "eslint --ignore-path .gitignore ."
 	},
 	"eslintConfig": {
