add support to be loaded in node.js:
- expose dependency scanning functions; 
- allow to create instances of the loader that can load modules inside node.js; 
Also: 
- remove any special code for browser extensions (can now be handles via require.config(); 
- set config options in key iteration order; 
- remove support for generators as async functions; 
- the empty string is a prefix for every id; 
- relative ids don' use the URL constructor for the resolving;

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "pbq",
 	"description": "Promise-based require (asynchronous module definition) implementation",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"author": "Niklas Gollenstede",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/NiklasGollenstede/pbq"
 	},
+	"main": "node.js",
 	"dependencies": {},
 	"devDependencies": {
 		"amdjs_test_server": "github:amdjs/amdjs-tests#1f50309",
